Prevent the nav bar contents from shifting when the timer ticks

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -172,6 +172,13 @@ button:hover {
   padding-top: 10vh;
 }
 
+/* nav bar */
+
+.nav-timer {
+  text-align: center;
+  width: 90px;
+}
+
 /* leaderboard page */
 
 .leaderboard-page {
